--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Практические задания</h1>
     <ol>
         <li><a href="task1.html">Практическое задание №1</a></li>
+        <li><a href="task2.html">Практическое задание №2</a></li>
     </ol>
 </body>
 </html>
