--- a/task1.html
+++ b/task1.html
@@ -10,7 +10,7 @@
     <h1>Практическое задание №1</h1>
     <hr>
     <h2>Вельш-корги</h2>
-    <img src="sobaka.jpg" alt="Щенок корги в цветочном поле" width="500">
+    <img src="images/task1/sobaka.jpg" alt="Щенок корги в поле цветов">
     <p>Корги- собачки невысокого роста с короткими лапками.</p>
     <hr>
     <h3>Разновидности породы</h3>
@@ -31,7 +31,7 @@
     </ul>
     <h3>Ссылка на википедию</h3>
     <a href="https://ru.wikipedia.org/wiki/%D0%92%D0%B5%D0%BB%D1%8C%D1%88-%D0%BA%D0%BE%D1%80%D0%B3%D0%B8">
-        <img src="wikipedia.png" alt="ссылка на википедию" width="64">
+        <img src="images/task1/wikipedia.png" alt="ссылка на википедию" width="64">
     </a>
 <hr>
 </body>
