--- a/task2.html
+++ b/task2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Практическое задание №2</title>
-    <link rel="stylesheet" href="task2.css">
+    <link rel="stylesheet" href="css/task2.css">
 </head>
 <body>
     <a class="back-to-main" href="index.html">На главную</a>
@@ -13,7 +13,7 @@
         <p class="favorite">
             <a href="#">❤️</a>
         </p>
-        <img src="orig.webp" alt="">
+        <img src="images/task2/orig.webp" alt="">
         <h3>Игровая приставка Microsoft Xbox Series X 1000 ГБ SSD, черный</h3>
         <p class="info">Xbox Series X — консоль нового поколения, которая обеспечивает сенсационно плавную частоту до 120 к/с и яркую и контрастную HDR-картинку. Погрузитесь в игру с головой, наслаждаясь более чёткими персонажами, яркими мирами и невероятными деталями в сверхреалистичном качестве 4K. Сочетание новой системы на кристалле (SOC) и архитектуры Xbox Velocity обеспечивает максимальную скорость, в то время как процессор и специализированный твердотельный накопитель объёмом 1 ТБ отдают вам полный контроль и позволяют разгоняться с 0-60 до 120 к/с. Отправляйтесь в новые приключения и наслаждайтесь ими в том виде, в котором они задумывались, вместе с Xbox Series X.</p>
         <p class="price">59 299 ꝑ <span class="old-price">69 999 ꝑ</span></p>
