--- a/task5.html
+++ b/task5.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Практическое задание №5</title>
-    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/task5.css">
 </head>
 <body>
-    <section class="gallery">
-        <img id="big-image" src="images/task5/images-1.jpg" alt="">
-        <div class="images">
-            <img id="img-1" src="images/task5/images-1.jpg" alt="">
-            <img id="img-2" src="images/task5/images-2.jpg" alt="">
-            <img id="img-3" src="images/task5/images-3.jpg" alt="">
-            <img id="img-4" src="images/task5/images-4.jpg" alt="">
-            <img id="img-5" src="images/task5/images-5.jpg" alt="">
-        </div>
-    </section>
+    <button id="burger-menu-btn">Меню</button>
+
+    <nav id="burger-menu" style="left: -400px;">
+        <a href="#">Главная</a>
+        <a href="#">Контакты</a>
+        <a href="#">О нас</a>
+        <a href="#">Товары</a>
+        <button id="burger-menu-close">Закрыть</button>
+    </nav>
+
 
     <script src="js/task5.js"></script>
 </body>
