--- a/task6.html
+++ b/task6.html
@@ -8,16 +8,16 @@
     <link rel="stylesheet" href="css/task6.css">
 </head>
 <body>
-    <section class="gallery">
-        <img id="big-image" src="images/task6/images-1.jpg" alt="">
-        <div class="images">
-            <img id="img-1" src="images/task6/images-1.jpg" alt="">
-            <img id="img-2" src="images/task6/images-2.jpg" alt="">
-            <img id="img-3" src="images/task6/images-3.jpg" alt="">
-            <img id="img-4" src="images/task6/images-4.jpg" alt="">
-            <img id="img-5" src="images/task6/images-5.jpg" alt="">
+    <div class="gallery">
+        <img class="gallery-big-image" id="big-image" src="images/task6/images-1.jpg" alt="">
+        <div class="gallery-images">
+            <img id="img-1" class="gallery-image" src="images/task6/images-1.jpg" alt="">
+            <img id="img-2" class="gallery-image" src="images/task6/images-2.jpg" alt="">
+            <img id="img-3" class="gallery-image" src="images/task6/images-3.jpg" alt="">
+            <img id="img-4" class="gallery-image" src="images/task6/images-4.jpg" alt="">
+            <img id="img-5" class="gallery-image" src="images/task6/images-5.jpg" alt="">
         </div>
-    </section>
+    </div>
 
     <script src="js/task6.js"></script>
 </body>
